@@ -1,3 +1,10 @@
+2002-11-04  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* shimbun/mew-shimbun.el (mew-shimbun-visit-folder): New
+	definition.
+	(mew-shimbun-retrieve-all, mew-shimbun-expire-all): Use
+	`mew-shimbun-visit-folder'.
+
 2002-10-31  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* shimbun/mew-shimbun.el: Fix comment.
